syntax = "proto3";
package daytrader;

message command{
    string user_id=1;
    float amount=2;
    string symbol=3;
    string filename=4;
    int32 transaction_id=5;
    string name = 6;
}

message log{
    string command = 1;
    string server_name = 2;
    int32 transaction_num = 3;
    string username = 4;
    string stock_symbol = 5;
    float price = 6;
    float funds = 7;
    string filename = 8;
    string crypto_key = 9;
    int64 quote_server_time = 10;
    string account_action = 11;
    string error_message = 12;
    string debug_message = 13;
}

service Logger{
    rpc LogUserCommand(log) returns (Response){} 
    rpc LogQuoteServerEvent(log) returns (Response){} 
    rpc LogAccountTransaction(log) returns (Response){} 
    rpc LogSystemEvent(log) returns (Response){} 
    rpc LogErrorEvent(log) returns (Response){} 
    rpc LogDebugEvent(log) returns (Response){} 
}

message Response{
    string message = 1;
}

service DayTrader{
    rpc Add(command) returns(Response) {}
    rpc Quote(command) returns(Response) {}
    rpc Buy(command) returns(Response) {}
    rpc Sell(command) returns(Response) {}
    rpc CommitBuy(command) returns(Response) {}
    rpc CommitSell(command) returns(Response) {}
    rpc CancelBuy(command) returns(Response) {}
    rpc CancelSell(command) returns(Response) {}
    rpc SetBuyAmount(command) returns(Response) {}
    rpc SetSellAmount(command) returns(Response) {}
    rpc SetBuyTrigger(command) returns(Response) {}
    rpc SetSellTrigger(command) returns(Response) {}
    rpc CancelSetSell(command) returns(Response) {}
    rpc CancelSetBuy(command) returns(Response) {}
    rpc DumpLog(command) returns(Response) {}
    rpc DisplaySummary(command) returns(Response) {}
}